Checking multiline comments

--- a/Less/test-good.less
+++ b/Less/test-good.less
@@ -1,7 +1,12 @@
-sgsfd/**
- * Peruse unit test: this file should pass code convention check.
+/**
+ * Introduction comment is required
  */
 
-html {
+
+
+/*
+ * Always start a mixin with some description and prefix it with something.
+ */
+.pw_someClass {
     background: @gp_colorHigh;
 }
