--- a/Less/test.less
+++ b/Less/test.less
@@ -1,7 +1,26 @@
 /**
- * Peruse unit test: this file should pass code convention check.
+ * Introduction comment
+ */
+
+/**
+ * This comment has lines that are too long nkh gkhsfdghfd gkh ghsg hkghkasghdghdfhghdsghkg uhdfgh kjdhgkjh kjghsd gkjh kjfdsh gk
+ * nkh gkhsfdghfd gkh ghsg hkghkasghdghdfhghdsghkg uhdfgh kjdhgkjh kjghsd gkjh kjfdsh gk ghfdhg kdh ghfk gkhgkdfghkhgkjlhgk
+ * 
  */
 
 .foo {
-	width: 100%; /* some comment */
+	/* This comment should be
+	correct */
+	height:10%;
+	width: 100%; /* some comment
+					on multiple lines */
+}
+
+
+.gp_gridColumn {
+	.gp_block {
+		margin-left: @gp_gridBlockPadding;
+		margin-right:@gp_gridBlockPadding;
+		margin-right :@gp_gridBlockPadding;
+	}
 }
