--- a/Less/test-bad.less
+++ b/Less/test-bad.less
@@ -1,4 +1,7 @@
 html {
+	color :#f00;
+	display:block;
+	clear:  both;
 	background: @gp_colorHigh; /* Multiline comment that contains too much content (longer than 120 characters) and starts after Less code.
 	*/
 }
