--- a/Less/test-good.less
+++ b/Less/test-good.less
@@ -8,5 +8,8 @@
  * Always start a mixin with some description and prefix it with something.
  */
 .pw_someClass {
+	clear: both;
+	display: block;
+	color: #f00;
     background: @gp_colorHigh;
 }
