--- a/Less/test.less
+++ b/Less/test.less
@@ -1,26 +1,16 @@
-/**
- * Introduction comment
- */
-
-/**
- * This comment has lines that are too long nkh gkhsfdghfd gkh ghsg hkghkasghdghdfhghdsghkg uhdfgh kjdhgkjh kjghsd gkjh kjfdsh gk
- * nkh gkhsfdghfd gkh ghsg hkghkasghdghdfhghdsghkg uhdfgh kjdhgkjh kjghsd gkjh kjfdsh gk ghfdhg kdh ghfk gkhgkdfghkhgkjlhgk
- * 
- */
-
-.foo {
-	/* This comment should be
-	correct */
-	height:10%;
-	width: 100%; /* some comment
-					on multiple lines */
-}
-
-
-.gp_gridColumn {
-	.gp_block {
-		margin-left: @gp_gridBlockPadding;
-		margin-right:@gp_gridBlockPadding;
-		margin-right :@gp_gridBlockPadding;
-	}
+.level1 {
+    .level2 {
+		.level3 {
+			.level4 {
+				.level5 {
+					.level6 {
+						.level7 {
+							.level8 {
+							}
+						}
+					}
+				}
+			}
+		}
+    }
 }
