Detect maximum nest depth

--- a/Less/test-bad.less
+++ b/Less/test-bad.less
@@ -1,7 +1,28 @@
+
 html {
 	color :#f00;
 	display:block;
 	clear:  both;
 	background: @gp_colorHigh; /* Multiline comment that contains too much content (longer than 120 characters) and starts after Less code.
 	*/
+}
+
+/**
+ * Testing large nest depth.
+ */
+.level1 {
+    .level2 { // some comment { { { {
+        .level3 { /* some comment`{ { { { */
+            .level4 {
+                .level5 {     
+                    .level6 {
+                        .level7 {
+                            .level8 {
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
