--- a/Less/test-bad.less
+++ b/Less/test-bad.less
@@ -1,10 +1,10 @@
 
+/* First line of document does not start with a document comment */
+
+/* All style properties on one line and in wrong order */
 html {
-	color :#f00;
-	display:block;
-	clear:  both;
-	background: @gp_colorHigh; /* Multiline comment that contains too much content (longer than 120 characters) and starts after Less code.
-	*/
+	background: @gp_colorHigh; color :#f00; display:block; clear: both; /* Multiline comment that contains too much content (longer than 120 characters) and starts after Less code.
+    */
 }
 
 /**
@@ -16,13 +16,30 @@ html {
             .level4 {
                 .level5 {     
                     .level6 {
-                        .level7 {
-                            .level8 {
-                            }
-                        }
                     }
                 }
             }
         }
     }
+}
+
+
+
+/**
+ * Wrong use of colons
+ */
+.foo {
+    width : 20px;
+    height :20px;
+    overflow:hidden;
+}
+
+
+
+/**
+ * Spaces at the end of the line
+ */
+.foo {
+    width: 20px;	
+    height: 20px;  
 }
